CSS: Fix the one pixel gap above the sidebar.

--- a/app/assets/stylesheets/RonRonnement.css.scss
+++ b/app/assets/stylesheets/RonRonnement.css.scss
@@ -268,7 +268,7 @@ button, input[type='submit'] {
 
 #sidebar {
   float: left;
-  margin-top: 36px;
+  margin-top: 35px;
   width: $PX_BRANDING_LARG;
   text-align: left;
   font-size: small;
